--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,6 +1,8 @@
 <%-include('includes/header.ejs')%> <%-include('includes/navbar.ejs')%>
-<div class="row">
-  <% prods.forEach(function(prod){ %>
+<div>
+  <!-- // <div class="row"> -->
+
+  <!-- <% prods.forEach(function(prod){ %>
   <div class="card col-lg-4 col-md-6 card">
     <img
       alt="productImage"
@@ -15,7 +17,7 @@
     <h6><%=prod.productFeatures[0].featureName%></h6>
     <h6><%=prod.productFeatures[0].featureValue%></h6>
     <h6><%=prod.productStatus%></h6>   
-    <form action="/admin/edit/:prod._id" method="post">                            
+    <form action="/admin/edit/:<%=prod._id%>" method="post">                            
       <button type="submit">Edit</button>    
       <input type="hidden" name="productId" value="<%=prod._id%>">        
     </form>
@@ -25,7 +27,42 @@
       <button type="submit">delete</button>            
     </form>   
   </div
-  <% }) %>
- 
-
+  <% }) %> -->
+  <div class="container">
+    <div class="row card-deck container">
+      <% prods.forEach(function(prod){ %>
+      <div class="col-md-4">
+        <div class="card">
+          <img
+            class="card-image-top"
+            src="<%=prod.productImage%>"
+            style="width: 100%; height: 350px"
+          />
+          <div class="card-body">
+            <h3 class="card-title"><u><%=prod.name%></u></h3>
+            <h5>Category--><%=prod.productCategory%></h5>
+            <h6>Selling Price--><%=prod.sellingPrice%></h6>
+            <h6>Purhasing Price--><%=prod.purhasingPrice%></h6>
+            <h6>Purchasing Quantity--><%=prod.productQuantity%></h6>
+            <h6>Product Color--> <%=prod.productColour%></h6>
+            <h6>Description--><%=prod.productDescription%></h6>
+            <h6>
+              Product Feature--> <%=prod.productFeatures[0].featureName%> :
+              <%=prod.productFeatures[0].featureValue%>
+            </h6>
+            <h6>Status--><%=prod.productStatus%></h6>
+            <div>
+              <form action="/admin/delete" method="POST">
+                <input type="hidden" value="<%= prod._id %>" name="productId" />              <a href="/admin/edit-product/<%=prod._id%>?edit=true" class="btn"
+                  >Edit</a
+                >
+                <button class="btn" type="submit">Delete</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% }) %>
+    </div>
+  </div>
 </div>
