--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,8 +19,8 @@
             <h6>Product Color--> <%=prod.productColour%></h6>
             <h6>Description--><%=prod.productDescription%></h6>
             <h6>
-              Product Feature--> <%=prod.productFeatures[0].featureName%> :
-              <%=prod.productFeatures[0].featureValue%>
+              Product Feature--> <%=prod.productFeatures.featureName%> :
+              <%=prod.productFeatures.featureValue%>
             </h6>
             <h6>Status--><%=prod.productStatus%></h6>
           </div>
